Feature: added HTML and CSS for About Section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
       <div class="hero">
         <div class="hero-banner">
           <h1>continue exploring</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ratione alias numquam odit dolor est!</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+            ratione alias numquam odit dolor est!
+          </p>
           <a href="#featured" class="btn hero-btn scroll-link">explore</a>
         </div>
       </div>
@@ -31,6 +34,31 @@
     <!-- end of header  -->
 
     <!-- about section -->
+    <!--title-->
+    <section class="section" id="about">
+      <div class="section-title">
+        <h2 >about <span>us</span></h2>
+      </div>
+    <!--end of title-->
+    <!--about data -->
+    <div class="section-center about-center">
+      <!--About Image-->
+      <article class="about-img-container">
+        <img src="./images/about.jpeg" class="about-img" alt="">
+      </article>
+      <!--End of About Image -->
+      <!--About Info -->
+      <article class="about-info">
+        <h3>explore the difference</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, aut quaerat! Adipisci libero aliquam cum totam sit temporibus. Labore, sequi?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, aut quaerat! Adipisci libero aliquam cum totam sit temporibus. Labore, sequi?</p>
+        <a href="#" class="btn">read more</a>
+      </article>
+      <!--End of About Info -->
+    </div>
+    <!--end of about data -->
+      
+    </section>
     <!-- end of about section -->
 
     <!-- services -->
