--- a/index.html
+++ b/index.html
@@ -62,6 +62,43 @@
     <!-- end of about section -->
 
     <!-- services -->
+      <section class="section services" id="services">
+        <div class="section-title">
+          <h2 >our <span>services</span></h2>
+        </div>
+        <div class="services-center section-center">
+          <article class="service">
+            <span class="service-icon">
+              <i class="fas fa-wallet fa-fw"></i>
+            </span>
+            <div class="service-info">
+              <h4 class="service-title">saving money</h4>
+              <p class="service-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ex numquam mollitia, sunt dolores excepturi!</p>
+            </div>
+
+          </article>
+          <article class="service">
+            <span class="service-icon">
+              <i class="fas fa-tree fa-fw"></i>
+            </span>
+            <div class="service-info">
+              <h4 class="service-title">endless biking</h4>
+              <p class="service-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ex numquam mollitia, sunt dolores excepturi!</p>
+            </div>
+
+          </article>
+          <article class="service">
+            <span class="service-icon">
+              <i class="fas fa-socks fa-fw"></i>
+            </span>
+            <div class="service-info">
+              <h4 class="service-title">amazing comfort</h4>
+              <p class="service-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ex numquam mollitia, sunt dolores excepturi!</p>
+            </div>
+
+          </article>
+        </div>
+      </section>
     <!--end services -->
 
     <!-- featured tours -->
