--- a/index.html
+++ b/index.html
@@ -37,71 +37,179 @@
     <!--title-->
     <section class="section" id="about">
       <div class="section-title">
-        <h2 >about <span>us</span></h2>
+        <h2>about <span>us</span></h2>
       </div>
-    <!--end of title-->
-    <!--about data -->
-    <div class="section-center about-center">
-      <!--About Image-->
-      <article class="about-img-container">
-        <img src="./images/about.jpeg" class="about-img" alt="">
-      </article>
-      <!--End of About Image -->
-      <!--About Info -->
-      <article class="about-info">
-        <h3>explore the difference</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, aut quaerat! Adipisci libero aliquam cum totam sit temporibus. Labore, sequi?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, aut quaerat! Adipisci libero aliquam cum totam sit temporibus. Labore, sequi?</p>
-        <a href="#" class="btn">read more</a>
-      </article>
-      <!--End of About Info -->
-    </div>
-    <!--end of about data -->
-      
+      <!--end of title-->
+      <!--about data -->
+      <div class="section-center about-center">
+        <!--About Image-->
+        <article class="about-img-container">
+          <img src="./images/about.jpeg" class="about-img" alt="" />
+        </article>
+        <!--End of About Image -->
+        <!--About Info -->
+        <article class="about-info">
+          <h3>explore the difference</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione,
+            aut quaerat! Adipisci libero aliquam cum totam sit temporibus.
+            Labore, sequi?
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione,
+            aut quaerat! Adipisci libero aliquam cum totam sit temporibus.
+            Labore, sequi?
+          </p>
+          <a href="#" class="btn">read more</a>
+        </article>
+        <!--End of About Info -->
+      </div>
+      <!--end of about data -->
     </section>
     <!-- end of about section -->
 
     <!-- services -->
-      <section class="section services" id="services">
-        <div class="section-title">
-          <h2 >our <span>services</span></h2>
-        </div>
-        <div class="services-center section-center">
-          <article class="service">
-            <span class="service-icon">
-              <i class="fas fa-wallet fa-fw"></i>
-            </span>
-            <div class="service-info">
-              <h4 class="service-title">saving money</h4>
-              <p class="service-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ex numquam mollitia, sunt dolores excepturi!</p>
-            </div>
-
-          </article>
-          <article class="service">
-            <span class="service-icon">
-              <i class="fas fa-tree fa-fw"></i>
-            </span>
-            <div class="service-info">
-              <h4 class="service-title">endless biking</h4>
-              <p class="service-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ex numquam mollitia, sunt dolores excepturi!</p>
-            </div>
-
-          </article>
-          <article class="service">
-            <span class="service-icon">
-              <i class="fas fa-socks fa-fw"></i>
-            </span>
-            <div class="service-info">
-              <h4 class="service-title">amazing comfort</h4>
-              <p class="service-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ex numquam mollitia, sunt dolores excepturi!</p>
-            </div>
-
-          </article>
-        </div>
-      </section>
+    <section class="section services" id="services">
+      <div class="section-title">
+        <h2>our <span>services</span></h2>
+      </div>
+      <div class="services-center section-center">
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-wallet fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">saving money</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ex
+              numquam mollitia, sunt dolores excepturi!
+            </p>
+          </div>
+        </article>
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-tree fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">endless biking</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ex
+              numquam mollitia, sunt dolores excepturi!
+            </p>
+          </div>
+        </article>
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-socks fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">amazing comfort</h4>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ex
+              numquam mollitia, sunt dolores excepturi!
+            </p>
+          </div>
+        </article>
+      </div>
+    </section>
     <!--end services -->
 
     <!-- featured tours -->
+    <section class="section" id="featured">
+      <div class="section-title">
+        <h2>Featured <span>tours</span></h2>
+      </div>
+
+      <div class="featured-center section-center">
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-1.jpeg" alt="" class="tour-img" />
+            <p class="tour-date">august 26th, 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>tibet adventure</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero,
+              tempore repellendus unde aliquam expedita nostrum quidem incidunt
+              velit perferendis! Voluptatibus.
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span><i class="fas fa-map"></i>China</span>
+              </p>
+              <p>6 days</p>
+              <p>from $2100</p>
+            </div>
+          </div>
+        </article>
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-2.jpeg" alt="" class="tour-img" />
+            <p class="tour-date">october 1st, 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>best of java</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero,
+              tempore repellendus unde aliquam expedita nostrum quidem incidunt
+              velit perferendis! Voluptatibus.
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span><i class="fas fa-map"></i>Indonesia</span>
+              </p>
+              <p>11 days</p>
+              <p>from $1400</p>
+            </div>
+          </div>
+        </article>
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-3.jpeg" alt="" class="tour-img" />
+            <p class="tour-date">september 15th, 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>explore hong kong</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero,
+              tempore repellendus unde aliquam expedita nostrum quidem incidunt
+              velit perferendis! Voluptatibus.
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span><i class="fas fa-map"></i>hong kong</span>
+              </p>
+              <p>8 days</p>
+              <p>from $5000</p>
+            </div>
+          </div>
+        </article>
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-4.jpeg" alt="" class="tour-img" />
+            <p class="tour-date">december 5th, 2020</p>
+          </div>
+          <div class="tour-info">
+            <h4>Kenya highlights</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero,
+              tempore repellendus unde aliquam expedita nostrum quidem incidunt
+              velit perferendis! Voluptatibus.
+            </p>
+            <div class="tour-footer">
+              <p>
+                <span><i class="fas fa-map"></i>Kenya</span>
+              </p>
+              <p>20 days</p>
+              <p>from $3300</p>
+            </div>
+          </div>
+        </article>
+      </div>
+      <div class="tour-btn">
+        <a href="#" class="btn">all tours</a>
+      </div>
+    </section>
     <!-- end of featured tours -->
 
     <!-- contact -->
