--- a/index.html
+++ b/index.html
@@ -309,6 +309,20 @@
     <!-- end of gallery  -->
 
     <!-- footer -->
+    <footer class="section footer">
+      <ul class="footer-links">
+        <li><a href="#home" class="footer-link scroll-link">home</a></li>
+        <li><a href="#about" class="footer-link scroll-link">about</a></li>
+        <li><a href="#featured" class="footer-link scroll-link">featured</a></li>
+        <li><a href="#gallery" class="footer-link scroll-link">gallery</a></li>
+      </ul>
+      <ul class="footer-icons">
+        <li><a href="#" target="_blank" class="footer-icon"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="#" target="_blank" class="footer-icon"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#" target="_blank" class="footer-icon"><i class="fab fa-squarespace"></i></a></li>
+      </ul>
+      <p class="copyright">copyright &copy; backroads travel tour company <span id="date"></span> all rights reserved</p>
+    </footer>
 
     <!-- js -->
     <script src="./js/app.js"></script>
