--- a/index.html
+++ b/index.html
@@ -19,6 +19,43 @@
     <!-- header  -->
     <header id="home">
       <!--navbar-->
+      <nav class="navbar">
+        <div class="nav-center">
+          <!--nav header-->
+          <div class="nav-header">
+            <img src="./images/logo.svg" class="nav-logo" alt="" />
+            <button type="button" class="nav-toggle" id="nav-toggle">
+              <i class="fas fa-bars"></i>
+            </button>
+          </div>
+          <!--end of nav header-->
+          <ul class="nav-links" id="nav-links">
+            <li><a href="#home" class="nav-link scroll-link">home</a></li>
+            <li><a href="#about" class="nav-link scroll-link">about</a></li>
+            <li>
+              <a href="#featured" class="nav-link scroll-link">featured</a>
+            </li>
+            <li><a href="#gallery" class="nav-link scroll-link">gallery</a></li>
+          </ul>
+          <ul class="nav-icons">
+            <li>
+              <a href="#" target="_blank" class="nav-icon"
+                ><i class="fab fa-facebook"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#" target="_blank" class="nav-icon"
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </li>
+            <li>
+              <a href="#" target="_blank" class="nav-icon"
+                ><i class="fab fa-squarespace"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
       <!--hero-->
       <div class="hero">
         <div class="hero-banner">
@@ -241,7 +278,7 @@
       <div class="gallery-center">
         <!--single item-->
         <article class="gallery-img-container">
-          <img src="./images/tour-1.jpeg" alt="" class="gallery-img">
+          <img src="./images/tour-1.jpeg" alt="" class="gallery-img" />
           <a href="#" class="gallery-icon">
             <i class="fas fa-search"></i>
           </a>
@@ -249,7 +286,7 @@
         <!--end of single item-->
         <!--single item-->
         <article class="gallery-img-container">
-          <img src="./images/tour-2.jpeg" alt="" class="gallery-img">
+          <img src="./images/tour-2.jpeg" alt="" class="gallery-img" />
           <a href="#" class="gallery-icon">
             <i class="fas fa-search"></i>
           </a>
@@ -257,7 +294,7 @@
         <!--end of single item-->
         <!--single item-->
         <article class="gallery-img-container">
-          <img src="./images/tour-3.jpeg" alt="" class="gallery-img">
+          <img src="./images/tour-3.jpeg" alt="" class="gallery-img" />
           <a href="#" class="gallery-icon">
             <i class="fas fa-search"></i>
           </a>
@@ -265,7 +302,7 @@
         <!--end of single item-->
         <!--single item-->
         <article class="gallery-img-container">
-          <img src="./images/tour-4.jpeg" alt="" class="gallery-img">
+          <img src="./images/tour-4.jpeg" alt="" class="gallery-img" />
           <a href="#" class="gallery-icon">
             <i class="fas fa-search"></i>
           </a>
@@ -273,7 +310,7 @@
         <!--end of single item-->
         <!--single item-->
         <article class="gallery-img-container">
-          <img src="./images/tour-5.jpeg" alt="" class="gallery-img">
+          <img src="./images/tour-5.jpeg" alt="" class="gallery-img" />
           <a href="#" class="gallery-icon">
             <i class="fas fa-search"></i>
           </a>
@@ -281,7 +318,7 @@
         <!--end of single item-->
         <!--single item-->
         <article class="gallery-img-container">
-          <img src="./images/tour-6.jpeg" alt="" class="gallery-img">
+          <img src="./images/tour-6.jpeg" alt="" class="gallery-img" />
           <a href="#" class="gallery-icon">
             <i class="fas fa-search"></i>
           </a>
@@ -289,7 +326,7 @@
         <!--end of single item-->
         <!--single item-->
         <article class="gallery-img-container">
-          <img src="./images/tour-1.jpeg" alt="" class="gallery-img">
+          <img src="./images/tour-1.jpeg" alt="" class="gallery-img" />
           <a href="#" class="gallery-icon">
             <i class="fas fa-search"></i>
           </a>
@@ -297,7 +334,7 @@
         <!--end of single item-->
         <!--single item-->
         <article class="gallery-img-container">
-          <img src="./images/tour-2.jpeg" alt="" class="gallery-img">
+          <img src="./images/tour-2.jpeg" alt="" class="gallery-img" />
           <a href="#" class="gallery-icon">
             <i class="fas fa-search"></i>
           </a>
@@ -313,15 +350,32 @@
       <ul class="footer-links">
         <li><a href="#home" class="footer-link scroll-link">home</a></li>
         <li><a href="#about" class="footer-link scroll-link">about</a></li>
-        <li><a href="#featured" class="footer-link scroll-link">featured</a></li>
+        <li>
+          <a href="#featured" class="footer-link scroll-link">featured</a>
+        </li>
         <li><a href="#gallery" class="footer-link scroll-link">gallery</a></li>
       </ul>
       <ul class="footer-icons">
-        <li><a href="#" target="_blank" class="footer-icon"><i class="fab fa-facebook"></i></a></li>
-        <li><a href="#" target="_blank" class="footer-icon"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#" target="_blank" class="footer-icon"><i class="fab fa-squarespace"></i></a></li>
+        <li>
+          <a href="#" target="_blank" class="footer-icon"
+            ><i class="fab fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#" target="_blank" class="footer-icon"
+            ><i class="fab fa-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#" target="_blank" class="footer-icon"
+            ><i class="fab fa-squarespace"></i
+          ></a>
+        </li>
       </ul>
-      <p class="copyright">copyright &copy; backroads travel tour company <span id="date"></span> all rights reserved</p>
+      <p class="copyright">
+        copyright &copy; backroads travel tour company
+        <span id="date"></span> all rights reserved
+      </p>
     </footer>
 
     <!-- js -->
